# IEEE_Server-Client

./: CMakeLists.txt  IEEE_Server-Client.cbp  IEEE_Server-Client.depend  README.md
src/: CMakeLists.txt  client.cpp  main.cpp
src/client/: client.cpp  client.h
src/server/: server.cpp  server.h
